syntax = "proto3";

import "insonmnia.proto";

package sonm;

service Locator {
    rpc Announce(AnnounceRequest) returns (Empty) {}
    rpc Resolve(ResolveRequest) returns(ResolveReply){}
}

message AnnounceRequest {
    repeated string clientEndpoints = 1;
    repeated string workerEndpoints = 2;
}

message ResolveRequest{
    string ethAddr = 1;
    enum EndpointType {
        CLIENT = 0;
        WORKER = 1;
        ANY = 2;
    }
    EndpointType endpointType = 2;
}

message ResolveReply {
    repeated string endpoints = 1;
}