syntax = "proto3";

package miner;

service Miner{
    rpc Ping(PingRequest) returns (PingReply) {}
    rpc Info(InfoRequest) returns (InfoReply) {}
    rpc Handshake(HandshakeRequest) returns (HandshakeReply) {}

    rpc Start(StartRequest) returns (StartReply) {}
    rpc Stop(StopRequest) returns (StopReply) {}
}

message PingRequest {}

message PingReply {
    string status = 1;
}

message InfoRequest {
}

message InfoReply {
}

message HandshakeRequest {
    string hub = 1;
}

message HandshakeReply {
    string miner = 1;
}

message StartRequest{
    string id = 1;
    string registry = 2;
    string image = 3;
}

message StartReply {
    string container = 1;
    message port {
        string IP = 1;
        string port = 2;
    }
    map<string, port> Ports = 2;
}

message StopRequest {
    string id = 1;
}

message StopReply {}
